// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provider execution order tests should be able to be in isLoading and isDebouncing state simultaneously 1`] = `
Array [
  Object {
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": true,
    "refetch": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": true,
    "refetch": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": false,
    "refetch": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": true,
    "refetch": [Function],
    "variables": Object {
      "slug": "2",
    },
  },
]
`;

exports[`provider execution order tests should resolve in order 1`] = `
Array [
  Object {
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": true,
    "refetch": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": false,
    "refetch": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": false,
    "refetch": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": false,
    "refetch": [Function],
    "variables": Object {
      "slug": "1",
    },
  },
  Object {
    "author": Object {
      "__typename": "Author",
      "name": "1",
      Symbol(id): "$ROOT_QUERY.author({\\"slug\\":\\"1\\"})",
    },
    "error": undefined,
    "fetchMore": [Function],
    "isLoading": true,
    "refetch": [Function],
    "variables": Object {
      "slug": "3",
    },
  },
]
`;
